documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long BASEADDR;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

L43W32API ULONG __stdcall L43_DPMRdL(ULONG addrval,HCARD handleval);

L43W32API VOID __stdcall L43_DPMRdsL(LPULONG valueptr,ULONG addrval,INT countval,HCARD handleval);

L43W32API VOID __stdcall L43_DPMRdsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCARD handleval);

L43W32API USHORT __stdcall L43_DPMRdW(ULONG addrval,HCARD handleval);

L43W32API VOID __stdcall L43_DPMWrB(USHORT value,ULONG addrval,HCARD handleval);

L43W32API VOID __stdcall L43_DPMWrL(ULONG value,ULONG addrval,HCARD handleval);

L43W32API VOID __stdcall L43_DPMWrsL(LPULONG valueptr,ULONG addrval,INT countval,HCARD handleval);

L43W32API VOID __stdcall L43_DPMWrsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCARD handleval);

L43W32API VOID __stdcall L43_DPMWrW(USHORT value,ULONG addrval,HCARD handleval);

L43W32API USHORT __stdcall L43_DspBioRd(HCARD handleval);

L43W32API ERRVAL __stdcall L43_DspHmClear(HCARD handleval);

L43W32API ERRVAL __stdcall L43_DspHmSet(HCARD handleval);

L43W32API ERRVAL __stdcall L43_DspIntfClear(HCARD handleval);

L43W32API BOOL __stdcall L43_DspIntfRead(HCARD handleval);

L43W32API ERRVAL __stdcall L43_DspIntmClear(HCARD handleval);

L43W32API ERRVAL __stdcall L43_DspIntmSet(HCARD handleval);

L43W32API ERRVAL __stdcall L43_DspXfClear(HCARD handleval);

L43W32API ERRVAL __stdcall L43_DspXfSet(HCARD handleval);

L43W32API LPCSTR __stdcall L43_ErrDesc(INT errval);

L43W32API LPCSTR __stdcall L43_ErrDescStr(INT errval);

L43W32API LPCSTR __stdcall L43_ErrName(INT errval);

L43W32API VOID __stdcall L43_ExpandMant(LPULONG mant,LPINT exp);

L43W32API VOID __stdcall L43_ExtDIODirSet(INT dionum,BOOL dirval,HCARD handleval);

L43W32API BOOL __stdcall L43_ExtLEDWINRd(HCARD handleval);

L43W32API VOID __stdcall L43_ExtLEDWINWr(BOOL ledval,HCARD handleval);

L43W32API VOID __stdcall L43_FileClose(LPVOID handle);

L43W32API BOOL __stdcall L43_FileErr(VOID);

L43W32API VOID __stdcall L43_FileErrClr(VOID);

L43W32API VOID __stdcall L43_FileErrSet(VOID);

L43W32API LPVOID __stdcall L43_FileOpenRead(LPCSTR filename);

L43W32API LPVOID __stdcall L43_FileOpenWrite(LPCSTR filename);

L43W32API BOOL __stdcall L43_FileRead(LPVOID handle,LPVOID buffer,USHORT count);

L43W32API BOOL __stdcall L43_FileSeek(LPVOID handle,ULONG offset);

L43W32API ULONG __stdcall L43_FileTell(LPVOID handle);

L43W32API BOOL __stdcall L43_FileWrite(LPVOID handle,LPVOID buffer,USHORT count);

L43W32API ULONG __stdcall L43_FilterAddr(INT labelval,INT sdival,INT channum,HCARD handleval);

L43W32API BASEADDR __stdcall L43_FilterCreate(HCARD handleval);

L43W32API ERRVAL __stdcall L43_FilterFill(MSGADDR msgaddr,BASEADDR baseaddr,HCARD handleval);

L43W32API USHORT __stdcall L43_FldGetParBit(ULONG msgval);

L43W32API ULONG __stdcall L43_FldPutParBit(ULONG msgval);

L43W32API USHORT __stdcall L43_GetHigh(ULONG val);

L43W32API USHORT __stdcall L43_GetLow(ULONG val);

L43W32API USHORT __stdcall L43_GlobalRdW(USHORT addrval,HCARD handleval);

L43W32API VOID __stdcall L43_GlobalWrW(USHORT value,USHORT addrval,HCARD handleval);

L43W32API ERRVAL __stdcall L43_HandleClose(HCARD handleval);

L43W32API ERRVAL __stdcall L43_HandleDel(HCARD handleval);

L43W32API ERRVAL __stdcall L43_HandleGet(LPSTR cardstr,LPINT cardnum,LPINT devnum,LPULONG sizval,HCARD handleval);

L43W32API HCARD __stdcall L43_HandleIns(LPCSTR cardname,INT cardnum,LPVOID hAppWnd,USHORT uiRemovalMsg);

L43W32API BOOL __stdcall L43_HandleOkay(HCARD handleval);

L43W32API ERRVAL __stdcall L43_HandleOpen(LPCSTR cardname,INT cardnum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_HandleOpenWin95(LPCSTR cardname,INT cardnum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_HandleOpenWinNT(LPCSTR cardname,INT cardnum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_HandleVer(HCARD handleval);