documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32NET.CS

        [DllImport("L43W32.DLL", EntryPoint = "_L43_DPMRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_DPMRdL(UInt32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DPMRdsL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_DPMRdsL(ref UInt32 valueptr, UInt32 addrval, Int32 countval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DPMRdsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_DPMRdsW(ref UInt16 valueptr, UInt32 addrval, Int32 countval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DPMRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_DPMRdW(UInt32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DPMWrB@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_DPMWrB(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DPMWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_DPMWrL(UInt32 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DPMWrsL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_DPMWrsL(ref UInt32 valueptr, UInt32 addrval, Int32 countval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DPMWrsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_DPMWrsW(ref UInt16 valueptr, UInt32 addrval, Int32 countval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DPMWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_DPMWrW(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DspBioRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_DspBioRd(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DspHmClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_DspHmClear(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DspHmSet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_DspHmSet(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DspIntfClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_DspIntfClear(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DspIntfRead@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_DspIntfRead(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DspIntmClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_DspIntmClear(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DspIntmSet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_DspIntmSet(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DspXfClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_DspXfClear(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_DspXfSet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_DspXfSet(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ErrDesc@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _L43_ErrDesc(Int32 errval);
        public static string L43_ErrDesc(Int32 errval) { return Marshal.PtrToStringAnsi(_L43_ErrDesc(errval)); }
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ErrDescStr@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _L43_ErrDescStr(Int32 errval);
        public static string L43_ErrDescStr(Int32 errval) { return Marshal.PtrToStringAnsi(_L43_ErrDescStr(errval)); }
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ErrName@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _L43_ErrName(Int32 errval);
        public static string L43_ErrName(Int32 errval) { return Marshal.PtrToStringAnsi(_L43_ErrName(errval)); }
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ExpandMant@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_ExpandMant(ref UInt32 mant, ref Int32 exp);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ExtDIODirSet@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_ExtDIODirSet(Int32 dionum, Int32 dirval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ExtLEDWINRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_ExtLEDWINRd(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ExtLEDWINWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_ExtLEDWINWr(Int32 ledval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FileClose@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_FileClose(IntPtr handle);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FileErr@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_FileErr();
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FileErrClr@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_FileErrClr();
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FileErrSet@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_FileErrSet();
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FileOpenRead@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern unsafe IntPtr* L43_FileOpenRead(ref string filename);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FileOpenWrite@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern unsafe IntPtr* L43_FileOpenWrite(ref string filename);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FileRead@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_FileRead(IntPtr handle, IntPtr buffer, UInt16 count);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FileSeek@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_FileSeek(IntPtr handle, UInt32 offset);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FileTell@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_FileTell(IntPtr handle);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FileWrite@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_FileWrite(IntPtr handle, IntPtr buffer, UInt16 count);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FilterAddr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_FilterAddr(Int32 labelval, Int32 sdival, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FilterCreate@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_FilterCreate(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FilterFill@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_FilterFill(UInt32 msgaddr, UInt32 basevaladdr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FldGetParBit@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_FldGetParBit(UInt32 msgval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FldPutParBit@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_FldPutParBit(UInt32 msgval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_GetHigh@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_GetHigh(UInt32 val);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_GetLow@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_GetLow(UInt32 val);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_GlobalRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_GlobalRdW(UInt16 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_GlobalWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_GlobalWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_HandleClose@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_HandleClose(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_HandleDel@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_HandleDel(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_HandleGet@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_HandleGet(ref string cardstr, ref Int32 cardnum, ref Int32 devnum, ref UInt32 sizval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_HandleIns@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_HandleIns(ref string cardname, Int32 cardnum, IntPtr happwnd, UInt16 uiremovalmsg);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_HandleOkay@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_HandleOkay(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_HandleOpen@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_HandleOpen(ref string cardname, Int32 cardnum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_HandleOpenWin95@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_HandleOpenWin95(ref string cardname, Int32 cardnum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_HandleOpenWinNT@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_HandleOpenWinNT(ref string cardname, Int32 cardnum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_HandleVer@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_HandleVer(UInt32 handleval);
